Update title and heading for BemmyGail

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BemmyGail Academy - Grading System</title>
+    <title>Bemmygail - Grading System</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
@@ -162,7 +162,7 @@
                     <i class="fas fa-university text-2xl"></i>
                 </div>
                 <div>
-                    <h1 class="text-xl font-bold tracking-wide">BemmyGail Academy</h1>
+                    <h1 class="text-xl font-bold tracking-wide">BemmyGail Grading System</h1>
                     <p class="text-[10px] text-slate-400 uppercase tracking-wider font-semibold">LMS Grading & Reporting System</p>
                 </div>
             </div>
